--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.10.0",
+    "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
@@ -17,6 +18,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
